birdfont (2.30.0) stable;

  * Smaller .birdfont files

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Tue Feb  8 03:03:27 CET 2022

birdfont (2.27.0) stable;

  * Automatic backups every time a font is saved.
  * Copy and paste functionality in various text fields.

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Jul 19 19:42:30 CEST 2019

birdfont (2.26.0) stable;

  * Better TTF parsing
  * Updated UCD (Unicode version 12)

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Wed Mar  6 16:44:39 CET 2019

birdfont (2.24.0) stable;

  * Default template for HTML preview
  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Mon Nov  5 21:16:12 CET 2018

birdfont (2.23.0) stable;

  * New default file extension: .birdfont instead of .bf
  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Aug 10 17:27:15 CEST 2018

birdfont (2.22.0) stable;

  * Support for input from Cyrillic keyboards and other layouts in the kerning tab.

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  tis 24 jul 2018 18:56:02 CEST

birdfont (2.19.0) stable;

  * Huge amount of kerning pairs supported in the extended GPOS table

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  mån 10 okt 2016 14:38:53 CEST

birdfont (2.16.12) stable;

  * Platform independet scrollbar
  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  mån 10 okt 2016 14:38:53 CEST

birdfont (2.16.9) stable;

  * RTL (right-to-left) writing in kerning tab
  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  lör  1 okt 2016 09:38:00 CEST

birdfont (2.16.0) stable;

  * New freehand tool
  * Rotate objects and point handles with 45 degree steps
  * Bug fixes

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Sun Jun 12 19:53:43 CEST 2016

birdfont (2.15.6) stable;

  * Editable .notdef character
  * Bug fixes in the SVG parser

 -- Johan Mattsson <johan.mattsson.m@gmail.com>  Fri Jan 22 13:10:07 CET 2016

birdfont (2.15.0) stable;

  * Speed optimizations
  * Bug fixes
